--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         Let’s build something awesome together!        
                     </p>
                     <!-- <a><button href="./assets/files/my-cv.pdf" download class="btn-rounded btn btn-outline-primary mt-4">Download CV</button> </a> -->
-                    <a href="./assets/files/my-cv.pdf" download class="btn btn-primary btn-lg">
+                    <a href="./assets/files/my-resume.pdf" download class="btn btn-primary btn-lg">
                         Download CV
                       </a>
                 </div>              
