--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <span class="up">HI!</span>
                 <span class="down">I am Prince</span>
             </h1>
-            <p class="header-subtitle">FRONTEND WEB DESIGNER</p>            
+            <p class="header-subtitle">GoHighLevel VA</p>            
 
             <a href="#portfolio"><button class="btn btn-primary">Visit My Works</button></a>
            
