update banner shopify skills

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 <span class="up">HI!</span>
                 <span class="down">I am Prince</span>
             </h1>
-            <p class="header-subtitle">GoHighLevel VA</p>            
+            <p class="header-subtitle fw-bold">GoHighLevel VA <span class="fs-1">&</span></p>        
+            <p class="header-subtitle">Shopify</p>  
 
             <a href="#portfolio"><button class="btn btn-primary">Visit My Works</button></a>
            
