--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <!-- <li class="item">
                     <a class="link" href="#blog">Blog</a>
                 </li> -->
-                <li class="item">
+                <!-- <li class="item">
                     <a class="link" href="#contact">Contact</a>
-                </li>
+                </li> -->
                 <!-- <li class="item ml-md-3">
                     <a href="components.html" class="btn btn-primary">Components</a>
                 </li> -->
